--- a/Eyosias Binyam/TransactionHome.html
+++ b/Eyosias Binyam/TransactionHome.html
@@ -187,7 +187,7 @@
        <div class="CardHeader">
         <h3>Available Balance</h3>
        <div class="drop-down" id="menu">
-        <a class="dropbtn" id="dropdown-trigger"><img src="Dots.png" alt="Wallet Image"></a>
+        <a class="dropbtn" onclick="dropDown()"><img src="Dots.png" alt="Wallet Image"></a>
         <div class="dropdown-content">
           <a href="#">View Account Details</a>
           <a href="#">View Balance Details</a>
@@ -239,13 +239,15 @@
     <div class="card-header">
    <h3>Cash Out Trasnactions</h3>
    <div class="dropdown">
-     <button class="dropbtn">Sort by Date</button>
-     <div class="dropdown-content">
-       <a href="#" class="sort" data-sort="date" data-order="asc">Ascending</a>
-       <a href="#" class="sort" data-sort="date" data-order="desc">Descending</a>
-     </div>
-   </div>
+    <button class="dropbtn" onclick="toggleDropdown()">Sort by Date</button>
+    <div class="dropdown-content" id="dropdown">
+      <a href="#" class="sort" data-sort="date" data-order="asc">Ascending</a>
+      <a href="#" class="sort" data-sort="date" data-order="desc">Descending</a>
+    </div>
+  
  </div>
+ 
+    </div>
     <div class="card-body">
    <table class="transaction-table">
      <thead>
@@ -305,7 +307,16 @@
     navList.classList.toggle("list_activate");
     navBtn.classList.toggle("btn_Change");
   });
-</script>
+
+
+  function toggleDropdown() {
+    if (dropdown.style.display === "block") {
+    dropdown.style.display = "none";
+  } else {
+    dropdown.style.display = "block";
+  }
+  }
+  </script>
 <script src="TransactionHome.js" ></script>
 
 </html>
