--- a/Eyosias Binyam/TransactionHome.html
+++ b/Eyosias Binyam/TransactionHome.html
@@ -68,8 +68,17 @@
     </div>
   </div>
   <div class="card-back">
+    <img src="success-icon.png" alt="Success Icon">
     <h2>Deposit Successful</h2>
+    <p>Thank you for your deposit!</p>
+    <p>Date: [Insert Transaction Date]</p>
+    <p>Account: [Insert Account Number]</p>
+    <p>Transaction ID: [Insert Transaction ID]</p>
+    <p>New Account Balance: $[Insert Updated Balance]</p>
+    <button id="go-back-btn" class="btn btn-primary">Go Back</button>
+
   </div>
+  
 </div>
 
 
